# restictray

./: README.md  TRANSLATIONS.md  compile_translations.py  globals.py  main.py  pyproject.toml  restic.py  scheduler.py  storage.py
restictray/: __init__.py  __main__.py  globals.py  main.py  restic.py  scheduler.py  storage.py
restictray/translations/: restictray_de.qm  restictray_de.ts
